# Theory_of_Parallelism

./: .gitmodules
task_1/: CMakeLists.txt  README.md  double.cpp  float.cpp
task_2/1/: CMakeLists.txt  main.cpp
task_2/2/: CMakeLists.txt  main.cpp
task_2/3/: CMakeLists.txt  main_1.cpp  main_2.cpp
task_2/4/: CMakeLists.txt  main.cpp
task_3/1/: CMakeLists.txt  main.cpp
task_3/2/: CMakeLists.txt  main.cpp  tests.cpp
task_4/: main.py
task_5/: main.py
task_6/: CMakeLists.txt  jacobi.cpp  laplace2d.cpp  laplace2d.h
task_6/gpu/: CMakeLists.txt  jacobi.cpp  laplace2d.cpp  laplace2d.h
task_6/parallel/: CMakeLists.txt  jacobi.cpp  laplace2d.cpp
task_6/sequential/: CMakeLists.txt  laplace2d.cpp  laplace2d.h
